Fix location picker documentation
ISSUE PLPS-112

--- a/src/BusinessLogic/Resources/LocationPicker/locationPicker.html
+++ b/src/BusinessLogic/Resources/LocationPicker/locationPicker.html
@@ -61,5 +61,5 @@
 <!-- Location picker script used to display locations -->
 
 <script>
-    Packlink.locationPicker.display(YOUR_LOCATIONS, CALLBACK_FUNCTION, TRANSLATION_LANGUAGE);
+    Packlink.locationPicker.display(YOUR_LOCATIONS, CALLBACK_FUNCTION, SELECTED_LOCATION_ID | NULL, TRANSLATION_LANGUAGE);
 </script>
