--- a/src/BusinessLogic/Resources/LocationPicker/examples/index.html
+++ b/src/BusinessLogic/Resources/LocationPicker/examples/index.html
@@ -129,7 +129,7 @@
 
         Packlink.locationPicker.display(locations, function (id) {
             document.getElementById('select-display').innerHTML = 'Selected: ' + id;
-        }, 'en');
+        }, null, 'en');
     </script>
 </body>
 </html>
