Fix location picker label position
ISSUE PLPS-112

--- a/src/BusinessLogic/Resources/LocationPicker/locationPicker.html
+++ b/src/BusinessLogic/Resources/LocationPicker/locationPicker.html
@@ -5,13 +5,13 @@
         <div class="lp-locations">
             <div class="lp-input-wrapper">
                 <div class="input">
-                    <input type="text" data-lp-id="search-box">
+                    <input type="text" title="" required data-lp-id="search-box">
                     <span class="label" data-lp-id="search-box-label"></span>
                 </div>
             </div>
 
             <div data-lp-id="locations"></div>
-        </div>
+        </div>`
     </div>
 </location-picker>
 
