Fix templating mechanism and update translations service
Issue: PLCR1801-14 PLCR1801-19

--- a/src/BusinessLogic/Resources/html/basic-layout.html
+++ b/src/BusinessLogic/Resources/html/basic-layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>DEMO</title>
+    <link rel="stylesheet" href="../css/app.css">
     <script src="../js/TranslationService.js"></script>
 </head>
 <body style="padding: 10px 10px 10px 150px; height:100%">
